--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,20 @@ node_modules/
 .env
 build/
 .idea/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
