--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   "main": "lib/index.js",
   "dependencies": {
     "@firebase/app-types": "0.x",
+    "@types/node": "^18.0.0",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0"
   },
