--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/core": "^7.0.0-0",
     "@babel/plugin-syntax-flow": "^7.14.5",
     "@babel/plugin-transform-react-jsx": "^7.14.9",
+    "@firebase/app-types": "^0.7.0",
     "@popperjs/core": "^2.10.2",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,11 +16,15 @@
     "@types/react-dom": "^18.0.5",
     "bootstrap": "^5.1.3",
     "firebase": "^9.0.0",
+    "firebase-admin": "^11.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-service-locator": "^1.4.3",
+    "reflect-metadata": "^0.1.13",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
