--- a/package.json
+++ b/package.json
@@ -8,25 +8,23 @@
     "@babel/plugin-transform-react-jsx": "^7.14.9",
     "@firebase/app-types": "^0.7.0",
     "@popperjs/core": "^2.10.2",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.41",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
+    "@types/react": "^17.0.39",
+    "react-dom": "^17.0.2",
     "bootstrap": "^5.1.3",
     "firebase": "^9.0.0",
     "firebase-admin": "^11.0.0",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.4.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-service-locator": "^1.4.3",
     "reflect-metadata": "^0.1.13",
     "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "typed-ts-events": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -53,7 +51,5 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/dom": "^7.21.4",
-    "@testing-library/jest-dom": "^4.2.4"
   }
 }
