--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.41",
     "@types/react": "^17.0.39",
-    "react-dom": "^17.0.2",
+    "@types/react-dom": "^18.0.5",
     "bootstrap": "^5.1.3",
     "firebase": "^9.0.0",
     "firebase-admin": "^11.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
+    "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-service-locator": "^1.4.3",
     "reflect-metadata": "^0.1.13",
+    "typed-ts-events": "^1.2.1",
     "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4",
-    "typed-ts-events": "^1.2.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,8 +35,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -49,7 +49,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
   }
 }
