--- a/functions/package.json
+++ b/functions/package.json
@@ -15,9 +15,13 @@
   "main": "lib/index.js",
   "dependencies": {
     "@firebase/app-types": "0.x",
+    "@types/eslint": "^8.4.3",
     "@types/node": "^18.0.0",
+    "@types/nodemailer": "^6.4.4",
+    "cors": "^2.8.5",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0"
+    "firebase-functions": "^3.18.0",
+    "nodemailer": "^6.7.5"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
