--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.11.41",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^18.0.5",
+    "@types/react-google-recaptcha": "^2.1.5",
     "bootstrap": "^5.1.3",
     "firebase": "^9.0.0",
     "firebase-admin": "^11.0.0",
@@ -20,6 +21,7 @@
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.3",
+    "react-google-recaptcha": "^2.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-service-locator": "^1.4.3",
