--- a/functions/package.json
+++ b/functions/package.json
@@ -15,10 +15,13 @@
   "main": "lib/index.js",
   "dependencies": {
     "@firebase/app-types": "0.x",
+    "@types/axios": "^0.14.0",
     "@types/eslint": "^8.4.3",
     "@types/node": "^18.0.0",
     "@types/nodemailer": "^6.4.4",
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
+    "firebase": "^9.8.4",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0",
     "nodemailer": "^6.7.5"
