--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "firebase": "^9.0.0",
     "firebase-admin": "^11.0.0",
     "lodash": "^4.17.21",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
+    "react-bootstrap-sweetalert": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.3",
     "react-google-recaptcha": "^2.1.0",
