--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.33.0",
+    "react-loading-overlay-ts": "^2.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-service-locator": "^1.4.3",
