--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "bootstrap": "^5.1.3",
     "firebase": "^9.0.0",
     "firebase-admin": "^11.0.0",
+    "i18next": "^19.0.0",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.1",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
@@ -26,6 +29,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.33.0",
+    "react-i18next": "^11.18.0",
     "react-loading-overlay-ts": "^2.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
