--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.11.41",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^18.0.5",
+    "@types/react-ga": "^2.3.0",
     "@types/react-google-recaptcha": "^2.1.5",
     "bootstrap": "^5.1.3",
     "firebase": "^9.0.0",
@@ -27,6 +28,7 @@
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.3",
+    "react-ga": "^3.3.1",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.33.0",
     "react-i18next": "^11.18.0",
