Refactor Prestige name phrase

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Prestige Paris Transfers",
-  "name": "Prestige Paris Transfers",
+  "short_name": "Espresso Paris Transfers",
+  "name": "Espresso Paris Transfers",
   "icons": [
     {
       "src": "favicon.ico",
