--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.182"
+    "@types/lodash": "^4.14.182",
+    "react-snap": "^1.23.0"
   }
 }
