--- a/package.json
+++ b/package.json
@@ -1,76 +1,77 @@
 {
-  "name": "taxi-book-pro",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@babel/core": "^7.0.0-0",
-    "@babel/plugin-syntax-flow": "^7.14.5",
-    "@babel/plugin-transform-react-jsx": "^7.14.9",
-    "@firebase/app-types": "^0.7.0",
-    "@popperjs/core": "^2.10.2",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.41",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^18.0.5",
-    "@types/react-ga": "^2.3.0",
-    "@types/react-google-recaptcha": "^2.1.5",
-    "bootstrap": "^5.1.3",
-    "firebase": "^9.0.0",
-    "firebase-admin": "^11.0.0",
-    "i18next": "^19.0.0",
-    "i18next-browser-languagedetector": "^6.1.4",
-    "i18next-http-backend": "^1.4.1",
-    "lodash": "^4.17.21",
-    "prop-types": "^15.8.1",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.1.2",
-    "react-bootstrap-icons": "^1.8.4",
-    "react-bootstrap-sweetalert": "^5.2.0",
-    "react-dom": "^17.0.2",
-    "react-firebase-hooks": "^5.0.3",
-    "react-ga": "^3.3.1",
-    "react-google-recaptcha": "^2.1.0",
-    "react-hook-form": "^7.33.0",
-    "react-i18next": "^11.18.0",
-    "react-loading-overlay-ts": "^2.0.0",
-    "react-phone-number-input": "^3.2.13",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "react-service-locator": "^1.4.3",
-    "react-share": "^4.4.0",
-    "react-social-icons": "^5.14.0",
-    "reflect-metadata": "^0.1.13",
-    "sass": "^1.53.0",
-    "typed-ts-events": "^1.2.1",
-    "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy": "pnpm build && firebase deploy"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@types/lodash": "^4.14.182",
-    "react-snap": "^1.23.0"
-  }
+    "name": "taxi-book-pro",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@babel/core": "^7.0.0-0",
+        "@babel/plugin-syntax-flow": "^7.14.5",
+        "@babel/plugin-transform-react-jsx": "^7.14.9",
+        "@firebase/app-types": "^0.7.0",
+        "@popperjs/core": "^2.10.2",
+        "@types/jest": "^27.5.2",
+        "@types/node": "^16.11.41",
+        "@types/react": "^17.0.39",
+        "@types/react-dom": "^18.0.5",
+        "@types/react-ga": "^2.3.0",
+        "@types/react-google-recaptcha": "^2.1.5",
+        "bootstrap": "^5.1.3",
+        "firebase": "^9.0.0",
+        "firebase-admin": "^11.0.0",
+        "i18next": "^19.0.0",
+        "i18next-browser-languagedetector": "^6.1.4",
+        "i18next-http-backend": "^1.4.1",
+        "lodash": "^4.17.21",
+        "prop-types": "^15.8.1",
+        "react": "^17.0.2",
+        "react-bootstrap": "^2.1.2",
+        "react-bootstrap-icons": "^1.8.4",
+        "react-bootstrap-sweetalert": "^5.2.0",
+        "react-dom": "^17.0.2",
+        "react-firebase-hooks": "^5.0.3",
+        "react-ga": "^3.3.1",
+        "react-google-recaptcha": "^2.1.0",
+        "react-hook-form": "^7.33.0",
+        "react-i18next": "^11.18.0",
+        "react-loading-overlay-ts": "^2.0.0",
+        "react-phone-number-input": "^3.2.13",
+        "react-router-dom": "^6.3.0",
+        "react-scripts": "5.0.1",
+        "react-service-locator": "^1.4.3",
+        "react-share": "^4.4.0",
+        "react-social-icons": "^5.14.0",
+        "reflect-metadata": "^0.1.13",
+        "sass": "^1.53.0",
+        "typed-ts-events": "^1.2.1",
+        "typescript": "^4.7.4",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "deploy": "pnpm build && firebase deploy",
+        "postbuild": "react-snap"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@types/lodash": "^4.14.182",
+        "react-snap": "^1.23.0"
+    }
 }
